--- a/site/sample.html
+++ b/site/sample.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Web Developmet Course</h1>
-<p>Hello everyone,i this course you will be learning web development,which is a combination of HTML,CSS,JavaScript.Happy learning....</p>
+<p>Hello everyone,in this course you will be learning web development,which is a combination of HTML,CSS,JavaScript.Happy learning....</p>
 </body>
 </html>
