--- a/site/ul.html
+++ b/site/ul.html
@@ -6,6 +6,7 @@
 	<title>HTML Basics</title>
 </head>
 <body>
+<img src="Snapchat-35405557.jpg" width="666" height="1280" alt="kannayya">
 <h1>Fruits</h1>
 <ul>
    <li>Banana</li>
