--- a/site/module2-solution/index.html
+++ b/site/module2-solution/index.html
@@ -11,13 +11,14 @@
 }
 h1 {
 	margin-bottom: 15px;
-	font-size: 75%;
+	font-size: 125px;
 	text-align: center;
 }
 p {
 	background-color: gray;
 	border: 1px solid black;
 	color: white;
+	padding: 10px;
 }
 .row{
 	width: 100%;
