--- a/site/selectors.html
+++ b/site/selectors.html
@@ -9,9 +9,15 @@
             color: blue;
             font-style: italic;
 	}
-	h1, h2{
+	h2{
             color: green;
             text-align: center;
+	}
+	h1{
+		color: red;
+		text-align: left;
+		font-weight: 25px;
+		font-style: bold;
 	}
 </style>
 <body>
