--- a/site/module2-solution/index.html
+++ b/site/module2-solution/index.html
@@ -16,9 +16,11 @@ h1 {
 }
 p {
 	background-color: gray;
-	border: 1px solid black;
-	color: white;
+	font-style: Hel
 	padding: 10px;
+	border: 1px solid black;
+	margin: 50px;
+	color: white;
 }
 .row{
 	width: 100%;
