--- a/site/combining selectors.html
+++ b/site/combining selectors.html
@@ -4,9 +4,18 @@
 <meta charset="utf-8">
 	<title>Combining Selectors</title>
 </head>
-
-
+<style>
+p.big{
+	font-size: 20px;
+	font-style: italic;
+	background-color: blue;
+	color: red;
+}
+</style>
 <body>
-
+<h1>Element with Class Selector</h1>
+<p class="big">This gets effected by the selectors because every p element with class as big gets effected by the styling.</p>
+<div class="big">This does not get effected coz,its not having p as an element.</div>
+<div><p class="big">This also effects because p is in div element</p></div>
 </body>
 </html>
