--- a/site/bootstrap.html
+++ b/site/bootstrap.html
@@ -8,6 +8,14 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 <body>
+	<h1>Hello Coursera!!!</h1>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-4">col 1</div>
+		<div class="col-md-4">col 2</div>
+		<div class="col-md-4">col 3</div>
+	</div>
+</div>
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
