--- a/site/bootstrap.html
+++ b/site/bootstrap.html
@@ -6,11 +6,17 @@
 <meta name="viewport" content="width=device-width, Intial-scale=1">
 	<title>Bootstrap Starter Page</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Hello Coursera!!!</h1>
 <div class="container-fluid">
 	<div class="row">
+		<div class="col-md-4">col 1</div>
+		<div class="col-md-4">col 2</div>
+		<div class="col-md-4">col 3</div>
+	</div>
+<div class="row">
 		<div class="col-md-4">col 1</div>
 		<div class="col-md-4">col 2</div>
 		<div class="col-md-4">col 3</div>
