--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -5,10 +5,19 @@
 <meta name="viewport" content="width=device-width, intial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE-edge">
 <title>David Chu's China Bistro</title>
-<link rel="stylesheet" type="text/css" href="css/style2.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="css/style2.css">
 </head>
 <body>
+<header>
+	<nav id="header-nav" class="navbar navbar-default">
+		<div class="container">
+			
+		</div>
+		
+	</nav>
+</header>
+
 <script type="js/jquery.3.5.1.min.js"></script>
 <script type="js/bootstrap.min.js"></script>
 </body>
