--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -12,7 +12,9 @@
 <header>
 	<nav id="header-nav" class="navbar navbar-default">
 		<div class="container">
-			
+			<div class="navbar-header"><a href="index.html">
+				<div id="logo-img" alt="Logo image"></div>
+			</a></div>
 		</div>
 		
 	</nav>
