--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -14,9 +14,17 @@
 <header>
 	<nav id="header-nav" class="navbar navbar-default">
 		<div class="container">
-			<div class="navbar-header"><a href="index.html" class="pull-left visible-md visible-lg">
+			<div class="navbar-header"><a href="restaurant-site.html">
 				<div id="logo-img" alt="Logo image"></div>
 			</a></div>
+		<div class="navbar-brand"><a href="restaurant-site.html"><h1>David Chu's China Bistro</h1></a>
+			<p>
+				<img src="">
+				<span>Kosher Certification</span>
+			</p>
+			
+		</div>
+
 		</div>
 		
 	</nav>
