--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -19,7 +19,7 @@
 			</a></div>
 		<div class="navbar-brand"><a href="restaurant-site.html"><h1>David Chu's China Bistro</h1></a>
 			<p>
-				<img src="">
+				<img src="images/star-k-logo.png">
 				<span>Kosher Certification</span>
 			</p>
 			
