--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -13,15 +13,19 @@
 <body>
 <header>
 	<nav id="header-nav" class="navbar navbar-default">
-		<div class="container">
-			<div class="navbar-header"><a href="restaurant-site.html">
-				<div id="logo-img" alt="Logo image"></div>
-			</a></div>
-		<div class="navbar-brand"><a href="restaurant-site.html"><h1>David Chu's China Bistro</h1></a>
-			<p>
-				<img src="images/star-k-logo.png">
-				<span>Kosher Certification</span>
-			</p>
+      <div class="container">
+        <div class="navbar-header">
+          <a href="restaurant-site.html" class="pull-left visible-md visible-lg">
+            <div id="logo-img"></div>
+          </a>
+			<div class="navbar-brand">
+            <a href="restaurant-site.html"><h1>David Chu's China Bistro</h1></a>
+            <p>
+              <img src="images/star-k-logo.png" alt="Kosher certification">
+              <span>Kosher Certified</span>
+            </p>
+          </div>
+		
 			
 		</div>
 
