--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -15,7 +15,7 @@
 	<nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="restaurant-site.html" style="float: left;" class="visible-md visible-lg">
+          <a href="restaurant-site.html" class="pull-left visible-md visible-lg">
             <div id="logo-img"></div>
           </a>
 			<div class="navbar-brand">
