--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -32,9 +32,9 @@
 				<span class="icon-bar"></span>
 			</button>
 		</div>
-			<div id="#collapsable-nav" class="collapse navbar-collapse">
+			<div id="collapsable-nav" class="collapse navbar-collapse">
 				<ul id="nav-list" class="nav navbar-nav navbar-right">
-					<li>
+					<li class="visible-xs active">
 						<a href="menu-categories.html">
 							<span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs">Menu</a>
 					</li>
