--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -57,7 +57,7 @@
 		</div>	
 	</nav>
 </header>
-<script type="js/jquery.3.5.1.min.js"></script>
+<script type="js/jquery-3.5.1.min.js"></script>
 <script type="js/bootstrap.min.js"></script>
 </body>
 </html>
