--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -57,7 +57,7 @@
 		</div>	
 	</nav>
 </header>
-<script type="js/jquery-2.1.4.min.js"></script>
-<script type="js/bootstrap.min.js"></script>
+<script src="js/jquery-2.1.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
