--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -10,7 +10,6 @@
  <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 </head>
-<style type="text/css"></style>
 <body>
 <header>
 	<nav id="header-nav" class="navbar navbar-default">
@@ -52,11 +51,17 @@
 							<span>410-602-5008</span></a><div>** We Deliver **</div>
 					</li>
 				</ul>
-				
 			</div>
 		</div>	
 	</nav>
 </header>
+
+<div id="call-btn" class="visible-xs">
+	<a class="btn" href="tel:410-602-5008">
+		<span class="glyphicon glyphicon-earphone"></span>410-602-5008
+	</a>
+</div>
+<div class="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
