--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -57,10 +57,11 @@
 </header>
 
 <div id="call-btn" class="visible-xs">
-	<a class="btn" href="tel:410-602-5008">
-		<span class="glyphicon glyphicon-earphone"></span>410-602-5008
-	</a>
-</div>
+    <a class="btn" href="tel:410-602-5008">
+    <span class="glyphicon glyphicon-earphone"></span>
+    410-602-5008
+    </a>
+  </div>
 <div class="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
