--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -62,7 +62,12 @@
     410-602-5008
     </a>
   </div>
-<div class="xs-deliver" class="text-center visible-xs">* We Deliver</div>
+<div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
+<div id="main-content" class="container">
+	<div class="jumbotron">
+		<img src="images/jumbotron_768.jpg" alt="picture of restaurant" class="img-responsive visible-xs">
+	</div>
+</div>
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
