--- a/site/restaurant-site.html
+++ b/site/restaurant-site.html
@@ -63,9 +63,27 @@
     </a>
   </div>
 <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
+
 <div id="main-content" class="container">
 	<div class="jumbotron">
 		<img src="images/jumbotron_768.jpg" alt="picture of restaurant" class="img-responsive visible-xs">
+	</div>
+
+	<div id="home-tiles" class="row">
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<a href="menu-categories.html"><div id="menu-title"><span>menu</span></div></a>
+		</div>
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<a href="single-category.html"><div id="specials-title"><span>specials</span></div></a>
+		</div>
+		<div class="col-md-4 col-sm-12 col-xs-12">
+			<a href="" target="_blank">
+				<div id="map-tile">
+					
+					<span>map</span>
+				</div>
+			</a>
+		</div>
 	</div>
 </div>
 <script src="js/jquery-3.5.1.min.js"></script>
