--- a/site/menu-categories.html
+++ b/site/menu-categories.html
@@ -69,6 +69,15 @@
 	<div class="text-center">
 		Substituting white rice with brown rice or fried rice after 3:00pm will be $1.50 for a pint and $2.50 for a quart.
 	</div>
+	<section class="row">
+		<div>
+			<a href="single-category.html">
+				<div class="category-tile">
+				<img width="200" height="200" src="images/menu/B/B.jpg" alt="lunch">					<span>Lunch</span>
+				</div>
+			</a>
+		</div>
+	</section>
 </div>
 
 <footer class="panel-footer">
