--- a/site/single-category.html
+++ b/site/single-category.html
@@ -66,7 +66,105 @@
 
 <div id="main-content" class="container">
 	<h2 id="single-category-title" class="text-center">Lunch Menu</h2>
-	<div class="text-center">Lunch is not served unti after 2pm</div>
+	<div class="text-center">Lunch is not served until after 2pm</div>
+	<section class="row">
+		<div class="menu-item-tile col-md-6">
+			<div class="row">
+				<div class="col-sm-5">
+					<div class="menu-item-photo">
+						<div>D01</div>
+						<img clas="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="item">
+					</div>
+					<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+				</div>
+				<div class="menu-item-description col-sm-7">
+					<h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+					<p class="menu-item-details">Lorem ipsum dolor sit amet, cnsectetur adipisicing elit. Eaque inventore esse minima incidunt impedit.</p>
+				</div>
+			</div>
+			<hr class="visible-xs">
+		</div>
+		<div class="menu-item-tile col-md-6">
+			<div class="row">
+				<div class="col-sm-5">
+					<div class="menu-item-photo">
+						<div>D02</div>
+						<img clas="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="item">
+					</div>
+					<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+				</div>
+				<div class="menu-item-description col-sm-7">
+					<h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+					<p class="menu-item-details">Lorem ipsum dolor sit amet, cnsectetur adipisicing elit. Eaque inventore esse minima incidunt impedit.</p>
+				</div>
+			</div>
+			<hr class="visible-xs">
+		</div>
+		<div class="menu-item-tile col-md-6">
+			<div class="row">
+				<div class="col-sm-5">
+					<div class="menu-item-photo">
+						<div>D03</div>
+						<img clas="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="item">
+					</div>
+					<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+				</div>
+				<div class="menu-item-description col-sm-7">
+					<h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+					<p class="menu-item-details">Lorem ipsum dolor sit amet, cnsectetur adipisicing elit. Eaque inventore esse minima incidunt impedit.</p>
+				</div>
+			</div>
+			<hr class="visible-xs">
+		</div>
+		<div class="menu-item-tile col-md-6">
+			<div class="row">
+				<div class="col-sm-5">
+					<div class="menu-item-photo">
+						<div>D04</div>
+						<img clas="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="item">
+					</div>
+					<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+				</div>
+				<div class="menu-item-description col-sm-7">
+					<h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+					<p class="menu-item-details">Lorem ipsum dolor sit amet, cnsectetur adipisicing elit. Eaque inventore esse minima incidunt impedit.</p>
+				</div>
+			</div>
+			<hr class="visible-xs">
+		</div>
+		<div class="menu-item-tile col-md-6">
+			<div class="row">
+				<div class="col-sm-5">
+					<div class="menu-item-photo">
+						<div>D05</div>
+						<img clas="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="item">
+					</div>
+					<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+				</div>
+				<div class="menu-item-description col-sm-7">
+					<h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+					<p class="menu-item-details">Lorem ipsum dolor sit amet, cnsectetur adipisicing elit. Eaque inventore esse minima incidunt impedit.</p>
+				</div>
+			</div>
+			<hr class="visible-xs">
+		</div>
+		<div class="menu-item-tile col-md-6">
+			<div class="row">
+				<div class="col-sm-5">
+					<div class="menu-item-photo">
+						<div>D06</div>
+						<img clas="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="item">
+					</div>
+					<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+				</div>
+				<div class="menu-item-description col-sm-7">
+					<h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+					<p class="menu-item-details">Lorem ipsum dolor sit amet, cnsectetur adipisicing elit. Eaque inventore esse minima incidunt impedit.</p>
+				</div>
+			</div>
+			<hr class="visible-xs">
+		</div>
+	</section>
 </div>
 
 <footer class="panel-footer">
