--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>JavaScript</title>
+	<script type="js/script.js"></script>
+	<script>
+		console.log(x);
+	</script>
 </head>
 <body>
 <h1>Hello Coursera!!!</h1>
