--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 	<title>JavaScript</title>
 	<script type="js/script.js"></script>
 	<script>
-		console.log(x);
+		console.log(string);
 	</script>
 </head>
 <body>
