--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>JavaScript</title>
-	<script type="js/script.js"></script>
+	<script  language="JavaScript" type="js/script.js"></script>
 	<script>
-	
+	console.log(x);
 	</script>
 </head>
 <body>
