--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>JavaScript</title>
-	<script  language="JavaScript" type="js/script.js"></script>
-	<script>
-	console.log(x);
-	</script>
+	<script src="js/script.js"></script>
+
 </head>
 <body>
 <h1>Hello Coursera!!!</h1>
